<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"
            android:minHeight="48dp"
            android:gravity="center"
            />
    <Button
            android:id="@+id/super_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/spotify_streamer"
            android:background="@color/button_background"
            android:layout_marginBottom="8dp"/>


    <Button
            android:id="@+id/super_duo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/super_duo"
            android:background="@color/button_background"
            android:layout_marginBottom="8dp"/>


    <Button
            android:id="@+id/build_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/build_bigger"
            android:background="@color/button_background"
            android:layout_marginBottom="8dp"/>


    <Button
            android:id="@+id/xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/xyz_reader"
            android:background="@color/button_background"
            android:layout_marginBottom="8dp"/>

    <Button
            android:id="@+id/capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/capstone_project"
            android:background="@color/button_background"/>

</LinearLayout>

